# Bismark-wgbs-rrbs

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  config_rrbs.yaml  config_wgbs.yaml  install.R  pyproject.toml  requirements.txt
environments/: rrbs_env.yml  wgbs_env.yml
scripts/: run_analysis.R
src/methylation_analysis/: __init__.py
src/methylation_analysis/R/: aligner.R  analyzer.R  annotator.R  config.R  deduplication.R  methylation_extractor.R  pipeline.R  qc_processor.R  visualizer.R
tests/: test_rrbs.R  test_wgbs.R
