[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylation-analysis"
version = "1.0.0"
description = "A comprehensive toolkit for DNA methylation analysis supporting both WGBS and RRBS workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Methylation Analysis Team"}
]

keywords = [
    "bioinformatics",
    "methylation",
    "WGBS",
    "RRBS",
    "epigenetics",
    "bisulfite-sequencing"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: R",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/methylation-analysis"
Repository = "https://github.com/yourusername/methylation-analysis"
Documentation = "https://github.com/yourusername/methylation-analysis/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
